--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         .heart-container {
             width: 100%;
-            max-width: 400px;
+            max-width: 500px;  /* Increased from 400px */
             padding: 20px;
             box-sizing: border-box;
         }
@@ -34,7 +34,7 @@
             cursor: pointer;
             width: 100%;
             height: auto;
-            max-width: 300px;
+            max-width: 400px;  /* Increased from 300px */
         }
 
         .heart-line {
@@ -104,7 +104,7 @@
             }
             
             svg {
-                max-width: 250px;
+                max-width: 300px;  /* Increased from 250px */
             }
 
             .heart-line {
