--- a/index.html
+++ b/index.html
@@ -28,6 +28,26 @@
             max-width: 500px;
             padding: 20px;
             box-sizing: border-box;
+            display: none;  /* Initially hide the heart */
+        }
+
+        .start-button {
+            padding: 15px 30px;
+            font-size: 20px;
+            background: transparent;
+            color: #ff3f3f;
+            border: 2px solid #ff3f3f;
+            border-radius: 25px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            margin-bottom: 20px;
+        }
+
+        .start-button:hover {
+            background: #ff3f3f;
+            color: black;
+            transform: scale(1.05);
+            box-shadow: 0 0 15px #ff3f3f;
         }
 
         svg {
@@ -45,10 +65,10 @@
             stroke-dashoffset: 300;
         }
 
-        #line1 { animation: drawLine 1s linear forwards; }
-        #line2 { animation: drawLine 1s linear forwards 1s; }
-        #line3 { animation: drawLine 1s linear forwards 2s; }
-        #line4 { animation: drawLine 1s linear forwards 3s; }
+        #line1 { animation: none; }  /* Remove initial animations */
+        #line2 { animation: none; }
+        #line3 { animation: none; }
+        #line4 { animation: none; }
 
         @keyframes drawLine {
             to { stroke-dashoffset: 0; }
@@ -114,6 +134,7 @@
     </style>
 </head>
 <body>
+    <button class="start-button" onclick="startAnimation()">Click Me</button>
     <div class="heart-container">
         <svg viewBox="0 0 400 400" onclick="showMessage()">
             <path id="line1" class="heart-line" d="M200,100 C130,50 50,100 50,170" />
@@ -132,8 +153,30 @@
     <div class="message" id="message"></div>
 
     <script>
-        const specialMessage = "You are my pizza even just thinking of you makes me happy…";
+        const specialMessage = "you know! You are my pizza even just thinking of you makes me happy…";
         let isMessageTyping = false;
+
+        function startAnimation() {
+            // Hide the button
+            document.querySelector('.start-button').style.display = 'none';
+            
+            // Show the heart container
+            const heartContainer = document.querySelector('.heart-container');
+            heartContainer.style.display = 'block';
+
+            // Start the line animations
+            const lines = ['line1', 'line2', 'line3', 'line4'];
+            lines.forEach((line, index) => {
+                setTimeout(() => {
+                    document.getElementById(line).style.animation = `drawLine 1s linear forwards`;
+                }, index * 1000);
+            });
+
+            // Auto-fill heart after all lines are drawn
+            setTimeout(() => {
+                document.getElementById('fullHeart').style.fill = "#ff3f3f";
+            }, 4000);
+        }
 
         function showMessage() {
             if (isMessageTyping) return;
@@ -177,11 +220,6 @@
 
             type();
         }
-
-        // Auto-fill heart after all lines are drawn
-        setTimeout(() => {
-            document.getElementById('fullHeart').style.fill = "#ff3f3f";
-        }, 4000);
     </script>
 </body>
 </html>
