--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
     <div class="message" id="message"></div>
 
     <script>
-        const specialMessage = "you know! You are my pizza even just thinking of you makes me happy…";
+        const specialMessage = ""You know, only your touch is enough to makes my heart start beating,
+And you’re my pizza, just thinking of you is so fulfilling."
+";
         let isMessageTyping = false;
 
         function addTouchAndClickEvent(element, handler) {
