--- a/index.html
+++ b/index.html
@@ -170,9 +170,7 @@
     <div class="message" id="message"></div>
 
     <script>
-        const specialMessage = ""You know, only your touch is enough to makes my heart start beating,
-And you’re my pizza, just thinking of you is so fulfilling."
-";
+        const specialMessage = "You know, only your touch is enough to makes my heart start beatingAnd you’re my pizza, just thinking of you is so fulfilling.";
         let isMessageTyping = false;
 
         function addTouchAndClickEvent(element, handler) {
